# notifications-utils

./: .dockerignore  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .pyup.yml  CHANGELOG.md  LICENCE  LICENSE  MANIFEST.in  Makefile  README.md  benchmark.py  pyproject.toml  requirements.txt  requirements_for_test.in  requirements_for_test.txt  requirements_for_test_common.in  requirements_for_test_common.txt  requirements_nl.in  requirements_nl.txt  ruff.toml  setup.cfg  setup.py  uv.toml
.github/workflows/: merge.yml  pr.yml
docker/: Dockerfile
docs/: README.md
docs/email_template/: README.md
notifications_utils/: __init__.py  asset_fingerprinter.py  bank_holidays.py  base64_uuid.py  celery.py  columns.py  config.py  document_download_blueprint.py  email_template.jinja2  eventlet.py  exception_handling.py  exceptions.py  field.py  file_types.py  formatters.py  greenlet.py  gunicorn_defaults.py  insensitive_dict.py  international_billing_rates.py  international_billing_rates.yml  international_billing_rates_nl.yml  interruptible_io.py  letter_timings.py  local_vars.py  logging.py  markdown.py  otel_decorators.py  patch_kombu_sqs.py  pdf.py  polygons.py  postal_address.py  qr_code.py  recipients.py  request_helper.py  s3.py  safe_string.py  sanitise_text.py  sealed_value.py  semconv.py  serialised_model.py  (+9 more)
notifications_utils/clients/antivirus/: antivirus_client.py
notifications_utils/clients/encryption/: encryption_client.py
notifications_utils/clients/otel/: otel_client.py  utils.py
notifications_utils/clients/redis/: __init__.py  redis_client.py  request_cache.py
notifications_utils/clients/signing/: signing_client.py
notifications_utils/clients/statsd/: statsd_client.py
notifications_utils/clients/zendesk/: zendesk_client.py
notifications_utils/countries/: __init__.py  data.py
notifications_utils/countries/_data/: synonyms.json  uk-islands.txt  uk-postcode-zones.txt
notifications_utils/countries_nl/: __init__.py
notifications_utils/data/: bank-holidays.json
notifications_utils/gunicorn/: __init__.py  defaults.py  eventlet.py
notifications_utils/jinja_templates/: README.md  _default_logo_svg.jinja2  broadcast_message_template.jinja2  broadcast_preview_template.jinja2  email_preview_template.jinja2  email_template.jinja2  email_template_nl.jinja2  letter_image_template.jinja2  sms_preview_template.jinja2
notifications_utils/jinja_templates/letter_pdf/: _body.jinja2  _body_nl.jinja2  _head.jinja2  _main_css.jinja2  _print_only_add_tag_css.jinja2  _print_only_css.jinja2  _print_only_hide_barcodes_css.jinja2  preview.jinja2  print.jinja2
notifications_utils/logging/: __init__.py  celery.py  flask.py  formatting.py
notifications_utils/recipient_validation/: email_address.py  errors.py  phone_number.py  postal_address.py
notifications_utils/recipient_validation/notifynl/: phone_number.py  postal_address.py
notifications_utils/testing/: comparisons.py
notifications_utils/version_tools/: .pre-commit-config.yaml  __init__.py  pyproject.toml  requirements_for_test_common.in  ruff.toml  uv.toml
scripts/: bump_version.py  run_tests.sh
tests/: conftest.py  country_synonyms.py  pdf_consts.py  test_antivirus_client.py  test_asset_fingerprinter.py  test_bank_holidays.py  test_base64_uuid.py  test_base_template.py  test_celery.py  test_columns.py  test_countries.py  test_countries_iso.py  test_encryption_client.py  test_exception_handling.py  test_field.py  test_field_html_handling.py  test_file_types.py  test_formatters.py  test_gsm.py  test_insensitive_dict.py  test_international_billing_rates.py  test_interruptible_io.py  test_letter_timings.py  test_local_vars.py  test_logging.py  test_markdown.py  test_otel_decorators.py  test_pdf.py  test_placeholders.py  test_polygons.py  test_postal_address.py  test_recipient_csv.py  test_recipient_validation.py  test_redis_client.py  test_request_cache.py  test_request_header_authentication.py  test_request_id.py  test_s3.py  test_safe_string.py  test_sanitise_text.py  (+12 more)
tests/clients/: test_redis.py
tests/clients/antivirus/: test_antivirus_client.py
tests/clients/encryption/: test_encryption_client.py
tests/clients/otel/: test_otel_client.py  test_utils.py
tests/clients/redis/: test_redis_client.py  test_request_cache.py
tests/clients/signing/: test_signing_client.py
tests/clients/statsd/: test_statsd_client.py
tests/clients/zendesk/: test_zendesk_client.py
tests/logging/: dummy_celery_app.py  test_celery.py
tests/recipient_validation/: test_email_address.py  test_phone_number.py  test_postal_address.py  test_postal_address_nl.py
tests/testing/: test_comparisons.py
tests/xml_schemas/: __init__.py
tests_nl/: country_synonyms.py  test_nl_countries.py  test_nl_letter_timings.py  test_nl_postal_address.py  test_nl_recipients_csv.py
