[build-system]
requires = ["setuptools"]

[project]
name = "notifications-utils"
dynamic = ["version"]
description = "Shared python code for NotifyNL."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Government Digital Service" },
    { name = "Worth Ventures B.V." }
]
requires-python = ">=3.11"
dependencies = [
    "boto3[crt]>=1.34.100",
    "cachetools>=5.5.0",
    "Flask-Redis>=0.4.0",
    "Flask>=3.1.0",
    "govuk-bank-holidays>=0.15",
    "gunicorn[eventlet]>=23.0.0",
    "itsdangerous>=2.2.0",
    "Jinja2>=3.1.6",
    "mistune<2.0.0",  # v2 is totally incompatible with unclear benefit
    "ordered-set>=4.1.0",
    "phonenumbers>=8.13.50",
    "pypdf>=3.13.0",
    "python-json-logger>=3.3.0",
    "pytz>=2024.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.2",  # Can’t go past 2.32.2 until https://github.com/psf/requests/issues/6730 is fixed
    "segno>=1.6.1",
    "smartypants>=2.0.1",
    "statsd>=4.0.1",
]

[project.urls]
Homepage = "https://github.com/worthnl/notifynl-utils"

[tool.pytest.ini_options]
xfail_strict = true
testpaths = ["tests"]
addopts = "-p no:warnings -n auto"

[tool.ruff]
extend-exclude = [
    "migrations/versions/",
    "__pycache__",
    "cache",
    "migrations",
    "build",
    "sample_cap_xml_documents.py",
]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",       # pycodestyle
    "W",       # pycodestyle
    "F",       # pyflakes
    "I",       # isort
    "B",       # flake8-bugbear
    "C90",     # mccabe cyclomatic complexity
    "G",       # flake8-logging-format
    "T20",     # flake8-print
    "UP",      # pyupgrade
    "C4",      # flake8-comprehensions
    "ISC",     # flake8-implicit-str-concat
    "RSE",     # flake8-raise
    "PIE",     # flake8-pie
    "N804",    # First argument of a class method should be named `cls`
    "RUF100",  # Checks for noqa directives that are no longer applicable
]
ignore = []

[tool.setuptools.dynamic]
version = {attr = "notifications_utils.version.__version__"}

[tool.setuptools.packages.find]
exclude = ["tests*"]

[dependency-groups]
dev = [
    "beautifulsoup4==4.12.3",
    "build==1.2.2",
    "celery==5.3.6",
    "freezegun==1.5.1",
    "pytest==8.3.4",
    "pytest-cov>=6.1.1",
    "pytest-emoji>=0.2.0",
    "pytest-env==1.1.5",
    "pytest-md>=0.2.0",
    "pytest-mock==3.14.0",
    "pytest-testmon==2.1.1",
    "pytest-xdist==3.6.1",
    "redis>=4.3.4",
    "requests-mock==1.12.1",
    "ruff==0.11.4",
]
